ngx-cluster-with-cert-setup/cert-manager/ngx-ing.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
  name: ngx
  namespace: default
spec:
  tls:
  - hosts:
    - demo.mehkey.com
    secretName: ngx-tls-cert
  rules:
    - host: demo.mehkey.com
      http:
        paths:
        - backend:
            serviceName: ngx
            servicePort: 80
